@@ -262,28 +262,34 @@ class EventBank(_Bank):
         """
         bank_path = str(self.bank_path)
 
-        def func(path):
-            """ Function to yield events, update_time and paths. """
-            cat = try_read_catalog(path, format=self.format)
-            update_time = getmtime(path)
-            path = path.replace(bank_path, "")
-            return cat, update_time, path
-
         self._enforce_min_version()  # delete index if schema has changed
         # create iterator  and lists for storing output
         update_time = time.time()
         # create an iterator which yields files to update and updates bar
         file_yielder = self._unindexed_iterator(paths=paths)
         update_file_feeder = self._measure_iterator(file_yielder, bar)
+        new_func = partial(
+            self._get_cat_update_time_path, bank_path=bank_path, format=self.format
+        )
         # create iterator, loop over it in chunks until it is exhausted
-        iterator = self._map(func, update_file_feeder)
+        iterator = self._map(new_func, update_file_feeder)
         events_remain = True
         while events_remain:
             events_remain = self._index_from_iterable(iterator, update_time)
         return self
 
+    @staticmethod
+    def _get_cat_update_time_path(path, bank_path, format):
+        """ Function to yield events, update_time and paths. """
+        # NOTE: This function must be static to avoid pickling the attached
+        # executor. (see #158).
+        cat = try_read_catalog(path, format=format)
+        update_time = getmtime(path)
+        path = path.replace(bank_path, "")
+        return cat, update_time, path
+
     def _index_from_iterable(self, iterable, update_time):
-        """ Iterate over an event iterable and dump to database. """
+        """Iterate over an event iterable and dump to database."""
         events, update_times, paths = [], [], []
         max_mem = self._max_events_in_memory  # this avoids the MRO each loop
         events_remain = False
@@ -358,37 +364,6 @@ class EventBank(_Bank):
         self._metadata = meta
         self._index = None
 
-    def get_event_path(
-        self, event: ev.Event, index: Optional[ProgressBar] = None
-    ) -> Path:
-        """
-        Get the path an event would be stored in a bank.
-
-        Parameters
-        ----------
-        event
-            An obspy Event.
-        index
-            If Not None, a dataframe of the current index.
-
-        Returns
-        -------
-
-        """
-        bank_path = str(self.bank_path)
-        df = self.read_index().set_index("event_id") if index is None else index
-        rid = str(event.resource_id)
-        if rid in df.index:  # event needs to be updated
-            path = df.loc[rid, "path"]
-            save_path = bank_path + path
-            assert exists(save_path)
-        else:  # event file does not yet exist
-            path = _summarize_event(
-                event, path_struct=self.path_structure, name_struct=self.name_structure
-            )["path"]
-            save_path = (Path(self.bank_path) / path).absolute()
-        return Path(save_path)
-
     # --- meta table
 
     def _read_metadata(self):
@@ -413,7 +388,9 @@ class EventBank(_Bank):
         files_paths = self.read_index(**kwargs)["path"]
         paths = str(self.bank_path) + _natify_paths(files_paths)
         read_func = partial(try_read_catalog, format=self.format)
-        map_kwargs = dict(chunksize=len(paths) // self._max_workers)
+        # Divide work evenly between workers, with a min chunksize of 1.
+        chunksize = len(paths) // self._max_workers or 1
+        map_kwargs = dict(chunksize=chunksize)
         try:
             mapped_values = self._map(read_func, paths.values, **map_kwargs)
             return reduce(add, mapped_values)
@@ -469,14 +446,6 @@ class EventBank(_Bank):
         If any of the events do not have an extractable reference time a
         ``ValueError`` will be raised.
         """
-
-        def func(event):
-            """ get an event's path, save, return path. """
-            path = self.get_event_path(event, index=df)
-            path.parent.mkdir(exist_ok=True, parents=True)
-            event.write(str(path), format=self.format)
-            return path
-
         self.ensure_bank_path_exists(create=True)
         # get catalog from any event client
         events = get_event_client(events).get_events()
@@ -485,9 +454,41 @@ class EventBank(_Bank):
         df = self.read_index(event_id=event_ids).set_index("event_id")
         # create an iterator and apply over potential pool
         event_feeder = self._measure_iterator(events, bar)
-        paths = list(self._map(func, event_feeder))
+        new_func = partial(
+            self._put_event,
+            index=df,
+            bank_path=self.bank_path,
+            path_structure=self.path_structure,
+            name_structure=self.name_structure,
+            format=self.format,
+        )
+        paths = list(self._map(new_func, event_feeder))
         if update_index:  # parse newly saved files and update index
             self.update_index(paths=paths)
         return self
+
+    @staticmethod
+    def _put_event(event, index, bank_path, path_structure, name_structure, format):
+        """
+        Get a single event's path, save to db, return path.
+        """
+        # NOTE: This function must be static to avoid pickling the attached
+        # executor (see #158)
+        bank_path = str(bank_path)
+        df = index
+        rid = str(event.resource_id)
+        if rid in df.index:  # event needs to be updated
+            path = df.loc[rid, "path"]
+            save_path = bank_path + path
+            assert exists(save_path)
+        else:  # event file does not yet exist
+            path = _summarize_event(
+                event, path_struct=path_structure, name_struct=name_structure
+            )["path"]
+            save_path = (Path(bank_path) / path).absolute()
+        path = Path(save_path)
+        path.parent.mkdir(exist_ok=True, parents=True)
+        event.write(str(path), format=format)
+        return path
 
     get_event_summary = read_index
