@@ -687,17 +687,25 @@ class TestConcurrency:
     """ Tests for using an executor for concurrency. """
 
     @pytest.fixture
-    def ebank_executor(self, ebank, instrumented_thread_executor, monkeypatch):
-        """ Attach the instrument threadpool executor to ebank. """
-        monkeypatch.setattr(ebank, "executor", instrumented_thread_executor)
+    def ebank_executor(self, ebank, instrumented_executor, monkeypatch):
+        """Attach the instrumented executor to the EventBank."""
+        monkeypatch.setattr(ebank, "executor", instrumented_executor)
         return ebank
+
+    @pytest.fixture
+    def new_catalog(self):
+        """Change the resource ids of events in the default catalog, return."""
+        cat = obspy.read_events()
+        for event in cat:
+            event.resource_id = ev.ResourceIdentifier()
+        return cat
 
     def test_executor_get_events(self, ebank_executor):
         """ Ensure the threadpool map function is used for reading events. """
         # get events, ensure map is used
         _ = ebank_executor.get_events()
         counter = getattr(ebank_executor.executor, "_counter", {})
-        assert counter.get("map", 0) == 1
+        assert counter.get("map", 0) > 0
 
     def test_executor_index_events(self, ebank_executor):
         """ Ensure threadpool map is used for updating the index. """
@@ -707,4 +715,11 @@ class TestConcurrency:
             pass
         ebank_executor.update_index()
         counter = getattr(ebank_executor.executor, "_counter", {})
-        assert counter.get("map", 0) == 1
+        assert counter.get("map", 0) > 0
+
+    def test_put_events(self, ebank_executor, new_catalog):
+        """Ensure putting events doesn't raise and increments event count."""
+        count_before = len(ebank_executor.read_index())
+        ebank_executor.put_events(new_catalog)
+        count_after = len(ebank_executor.read_index())
+        assert count_after == count_before + len(new_catalog)
